Fix sizing on mobile

--- a/components/styles/embedded-video.module.scss
+++ b/components/styles/embedded-video.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   width: 40rem;
+  max-width: 90vw;
   margin-left: 1rem;
   float: right;
   position: relative;
