--- a/pages/styles/index.module.scss
+++ b/pages/styles/index.module.scss
@@ -4,6 +4,10 @@
   margin-right: auto;
 }
 
+.marginForSectionTop {
+  margin-top: 4rem;
+}
+
 .projectTiles {
   display: grid;
   grid-gap: 3rem;
